--- a/public/fonts/gilroy/fonts-list.css
+++ b/public/fonts/gilroy/fonts-list.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto&display=swap');
 
 @font-face {
     font-family: 'Gilroy';
