Fix fonts and add click outside hook

--- a/public/fonts/gilroy/fonts-list.css
+++ b/public/fonts/gilroy/fonts-list.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,500,600|Roboto:400,500,700,900&display=swap&subset=cyrillic,cyrillic-ext');
 
 @font-face {
     font-family: 'Gilroy';
